// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tsLibGenerator .eslintrc.json matches snapshot 1`] = `
{
  "extends": [
    "../../.eslintrc.json",
  ],
  "ignorePatterns": [
    "node_modules",
  ],
  "overrides": [
    {
      "files": [
        "jest.config.ts",
        "test/**/*.ts",
        "*.spec.ts",
        "*.test.ts",
      ],
      "parserOptions": {
        "project": [
          "packages/ts-lib/tsconfig.spec.json",
        ],
      },
    },
    {
      "excludedFiles": [
        "jest.config.ts",
        "test/**/*.ts",
        "*.spec.ts",
        "*.test.ts",
      ],
      "files": [
        "*.ts",
      ],
      "parserOptions": {
        "project": [
          "packages/ts-lib/tsconfig.lib.json",
        ],
      },
    },
  ],
}
`;

exports[`tsLibGenerator E2E project .eslintrc.json matches snapshot 1`] = `
{
  "extends": [
    "../../.eslintrc.json",
  ],
  "ignorePatterns": [
    "node_modules",
  ],
  "overrides": [
    {
      "files": [
        "jest.config.ts",
        "test/**/*.ts",
        "*.spec.ts",
        "*.test.ts",
      ],
      "parserOptions": {
        "project": [
          "e2e/ts-lib-e2e/tsconfig.spec.json",
        ],
      },
    },
    {
      "excludedFiles": [
        "jest.config.ts",
        "test/**/*.ts",
        "*.spec.ts",
        "*.test.ts",
      ],
      "files": [
        "*.ts",
      ],
      "parserOptions": {
        "project": [
          "e2e/ts-lib-e2e/tsconfig.app.json",
        ],
      },
    },
  ],
}
`;

exports[`tsLibGenerator E2E project jest.config.ts matches snapshot 1`] = `
"export default {
  displayName: "ts-lib-e2e",
  preset: "../../jest.preset.js",
    globals: {
    "ts-jest": {
      tsconfig: "<rootDir>/tsconfig.spec.json",
    },
  },
      testEnvironment: "node",
    transform: {
        "^.+\\\\.[tj]s$": "ts-jest",
      },
    moduleFileExtensions: ["ts", "js", "html", "json"],
    coverageDirectory: "../../reports/coverage/packages/ts-lib-e2e",
  reporters: [
    "default",
    [
      "jest-junit",
      {
        addFileAttribute: "true",
        classNameTemplate: "{suitename}",
        outputDirectory: "reports/junit",
        outputName: "ts-lib-e2e.xml",
      },
    ],
  ],
};
"
`;

exports[`tsLibGenerator E2E project project.json matches snapshot 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "implicitDependencies": [
    "ts-lib",
  ],
  "name": "ts-lib-e2e",
  "projectType": "application",
  "sourceRoot": "e2e/ts-lib-e2e/src",
  "tags": [],
  "targets": {
    "build": {
      "configurations": {
        "development": {},
        "production": {},
      },
      "defaultConfiguration": "production",
      "executor": "@nx/webpack:webpack",
      "options": {
        "assets": [
          "e2e/ts-lib-e2e/src/assets",
        ],
        "compiler": "tsc",
        "isolatedConfig": true,
        "main": "e2e/ts-lib-e2e/src/main.ts",
        "outputPath": "dist/e2e/ts-lib-e2e",
        "target": "node",
        "tsConfig": "e2e/ts-lib-e2e/tsconfig.app.json",
        "webpackConfig": "e2e/ts-lib-e2e/webpack.config.js",
      },
      "outputs": [
        "{options.outputPath}",
      ],
    },
    "e2e": {
      "configurations": {
        "ci": {
          "ci": true,
          "codeCoverage": true,
        },
      },
      "dependsOn": [
        {
          "projects": "self",
          "target": "install",
        },
      ],
      "executor": "@nx/jest:jest",
      "options": {
        "jestConfig": "e2e/ts-lib-e2e/jest.config.ts",
        "passWithNoTests": true,
      },
      "outputs": [
        "reports/coverage/e2e/ts-lib-e2e",
        "reports/junit/ts-lib-e2e.xml",
      ],
    },
    "install": {
      "dependsOn": [
        {
          "projects": "dependencies",
          "target": "build",
        },
      ],
      "executor": "nx:run-commands",
      "options": {
        "commands": [
          "yarn cache clean --all",
          "yarn install",
        ],
        "cwd": "e2e/ts-lib-e2e",
        "parallel": false,
      },
    },
    "lint": {
      "executor": "@nx/linter:eslint",
      "options": {
        "lintFilePatterns": [
          "e2e/ts-lib-e2e",
        ],
      },
      "outputs": [
        "{options.outputFile}",
      ],
    },
  },
}
`;

exports[`tsLibGenerator E2E project tsconfig.app.json or tsconfig.lib.json matches snapshot 1`] = `
{
  "compilerOptions": {
    "declaration": true,
    "types": [
      "node",
    ],
  },
  "exclude": [
    "jest.config.ts",
    "**/*.spec.ts",
    "**/*.test.ts",
    "test",
  ],
  "extends": "./tsconfig.json",
  "include": [
    "**/*.ts",
  ],
}
`;

exports[`tsLibGenerator E2E project tsconfig.json matches snapshot 1`] = `
{
  "compilerOptions": {
    "lib": [
      "es2022",
    ],
    "module": "commonjs",
    "outDir": "../../dist/out-tsc",
    "target": "es2022",
  },
  "extends": "../../tsconfig.base.json",
  "files": [],
  "include": [],
  "references": [
    {
      "path": "./tsconfig.app.json",
    },
    {
      "path": "./tsconfig.spec.json",
    },
  ],
}
`;

exports[`tsLibGenerator E2E project tsconfig.spec.json matches snapshot 1`] = `
{
  "compilerOptions": {
    "types": [
      "jest",
      "node",
    ],
  },
  "extends": "./tsconfig.json",
  "include": [
    "jest.config.ts",
    "**/*.spec.ts",
    "**/*.test.ts",
    "**/*.d.ts",
    "test",
  ],
}
`;

exports[`tsLibGenerator E2E project webpack.config.js webpack.config.js matches snapshot 1`] = `
"const { composePlugins, withNx } = require('@nx/webpack');

// Nx plugins for webpack.
module.exports = composePlugins(withNx(), (config) => {
  // Update the webpack config as needed here.
  // e.g. \`config.plugins.push(new MyPlugin())\`
  return config;
});
"
`;

exports[`tsLibGenerator jest.config.ts matches snapshot 1`] = `
"export default {
  displayName: 'ts-lib',
  preset: '../../jest.preset.js',
  globals: {
    'ts-jest': {
      tsconfig: '<rootDir>/tsconfig.spec.json',
    },
  },
  testEnvironment: 'node',
  transform: {
    '^.+\\\\.[tj]s$': 'ts-jest',
  },
  moduleFileExtensions: ['ts', 'js', 'html', 'json'],
  coverageDirectory: '../../reports/coverage/packages/ts-lib',
  reporters: [
    'default',
    [
      'jest-junit',
      {
        addFileAttribute: 'true',
        classNameTemplate: '{suitename}',
        outputDirectory: 'reports/junit',
        outputName: 'ts-lib.xml',
      },
    ],
  ],
};
"
`;

exports[`tsLibGenerator project.json matches snapshot 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "ts-lib",
  "projectType": "library",
  "sourceRoot": "packages/ts-lib/src",
  "tags": [],
  "targets": {
    "build": {
      "executor": "@nx/js:tsc",
      "options": {
        "assets": [
          "packages/ts-lib/*.md",
        ],
        "main": "packages/ts-lib/src/index.ts",
        "outputPath": "dist/packages/ts-lib",
        "tsConfig": "packages/ts-lib/tsconfig.lib.json",
      },
      "outputs": [
        "{options.outputPath}",
      ],
    },
    "deploy": {
      "configurations": {
        "development": {
          "dryRun": true,
        },
        "production": {
          "dryRun": false,
        },
      },
      "defaultConfiguration": "development",
      "dependsOn": [
        {
          "projects": "self",
          "target": "build",
        },
      ],
      "executor": "@chiubaka/nx-plugin:npm-publish",
      "options": {
        "packagePath": "dist/packages/ts-lib",
      },
    },
    "lint": {
      "executor": "@nx/linter:eslint",
      "options": {
        "lintFilePatterns": [
          "packages/ts-lib",
        ],
      },
      "outputs": [
        "{options.outputFile}",
      ],
    },
    "publish": {
      "command": "node tools/scripts/publish.mjs ts-lib {args.ver} {args.tag}",
      "dependsOn": [
        "build",
      ],
    },
    "test": {
      "configurations": {
        "ci": {
          "ci": true,
          "codeCoverage": true,
        },
      },
      "executor": "@nx/jest:jest",
      "options": {
        "jestConfig": "packages/ts-lib/jest.config.ts",
        "passWithNoTests": true,
      },
      "outputs": [
        "reports/coverage/packages/ts-lib",
        "reports/junit/ts-lib.xml",
      ],
    },
  },
}
`;

exports[`tsLibGenerator tsconfig.app.json or tsconfig.lib.json matches snapshot 1`] = `
{
  "compilerOptions": {
    "declaration": true,
  },
  "exclude": [
    "jest.config.ts",
    "**/*.spec.ts",
    "**/*.test.ts",
    "test",
  ],
  "extends": "./tsconfig.json",
  "include": [
    "**/*.ts",
  ],
}
`;

exports[`tsLibGenerator tsconfig.json matches snapshot 1`] = `
{
  "compilerOptions": {
    "lib": [
      "es2015",
    ],
    "module": "commonjs",
    "outDir": "../../dist/out-tsc",
    "target": "es2015",
  },
  "extends": "../../tsconfig.base.json",
  "files": [],
  "include": [],
  "references": [
    {
      "path": "./tsconfig.lib.json",
    },
    {
      "path": "./tsconfig.spec.json",
    },
  ],
}
`;

exports[`tsLibGenerator tsconfig.spec.json matches snapshot 1`] = `
{
  "compilerOptions": {
    "types": [
      "jest",
      "node",
    ],
  },
  "extends": "./tsconfig.json",
  "include": [
    "jest.config.ts",
    "**/*.spec.ts",
    "**/*.test.ts",
    "**/*.d.ts",
    "test",
  ],
}
`;
